[gd_scene load_steps=4 format=2]

[ext_resource path="res://Font/Arial.tres" type="DynamicFont" id=1]
[ext_resource path="res://Images/ReturnMenu.png" type="Texture" id=2]
[ext_resource path="res://GUI/InGame.gd" type="Script" id=3]

[node name="InGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReturnTitle" type="TextureButton" parent="."]
process_priority = -2
anchor_left = 1.0
anchor_right = 1.0
margin_left = -128.0
margin_bottom = 128.0
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ReturnTitle"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "Menu"
align = 1
valign = 1

[connection signal="pressed" from="ReturnTitle" to="." method="_on_ReturnTitle_pressed"]
